# taskf-api

./: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
Frontend/: index.html
Frontend/CSS/: styles.css
api/: models.py  serializers.py  views.py
api/migrations/: 0001_initial.py
core/: settings.py  urls.py
